# Boron

./: CMakeLists.txt  README.md
Boron/: Boron.h  CMakeLists.txt
Boron/BoronCore/: Application.cpp  Application.h  Core.h  Entrypoint.h  Logging.cpp  Message.h  MessageBus.cpp  MessageBus.h
Boron/Core/: Application.cpp  Application.h  Core.h  Entrypoint.h  Input.cpp  Input.h  Logging.h  Message.h  MessageBus.cpp  MessageBus.h  Window.cpp  Window.h
Boron/Graphics/: GuiLayer.cpp  GuiLayer.h  Window.cpp  Window.h
Editor/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
